# compiler

./: .gitignore  COPYRIGHT  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
admrules/: Cargo.toml  README.md
admrules/assets/: README.md
admrules/src/: main.rs
admrules/tests/: python_parity.rs
git-writer/: Cargo.toml
git-writer/src/: lib.rs
laws/: Cargo.toml  README.md
laws/src/: git_repo.rs  main.rs  render.rs  xml_parser.rs
laws/tests/: feature_gates.rs  markdown_byte_stability.rs
ordinances/: Cargo.toml  README.md
ordinances/assets/: README.md
ordinances/src/: main.rs
ordinances/tests/: python_parity.rs
precedents/: Cargo.toml  README.md
precedents/assets/: README.md
precedents/src/: lib.rs  main.rs  render.rs  xml_parser.rs
precedents/tests/: markdown_byte_stability.rs  oracle.rs  proptest_compose.rs
precedents/tests/fixtures/oracle-cache/: 100.xml  145683.xml  42.xml  999.xml
src/: render.rs  xml_parser.rs
