[package]
name = "precedent-kr-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
git-writer = { path = "../git-writer" }
quick-xml.workspace = true
rayon.workspace = true
regex.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
time.workspace = true
unicode-normalization.workspace = true

mimalloc = { workspace = true, optional = true }

[lib]
doctest = false

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
